--- a/package.json
+++ b/package.json
@@ -4,14 +4,45 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
-    "watch": "webpack --config webpack.common.js --watch"
+    "start": "electron-forge start",
+    "build": "electron-builder",
+    "watch": "webpack --config webpack.common.js --watch",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "author": "",
   "license": "ISC",
+  "build": {
+    "appId": "com.yourcompany.mintcafesystem",
+    "productName": "Mint Cafe System",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "main.js",
+      "build/js/app.js",
+      "src/**/*",
+      "public/**/*"
+    ],
+    "mac": {
+      "icon": "./src/assets/images/Windows-8-Systems-Mac-Os.512.png"
+    },
+    "win": {
+      "icon": "src/assets/images/image_6_4Pr_icon.ico"
+    },
+    "linux": {
+      "icon": "src/assets/images/icon.png"
+    }
+  },
   "devDependencies": {
     "@babel/core": "^7.22.9",
-    "electron": "^25.3.2",
+    "@electron-forge/cli": "^6.4.2",
+    "@electron-forge/maker-deb": "^6.4.2",
+    "@electron-forge/maker-rpm": "^6.4.2",
+    "@electron-forge/maker-squirrel": "^6.4.2",
+    "@electron-forge/maker-zip": "^6.4.2",
+    "@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
+    "electron": "^25.8.4",
     "electron-reload": "^2.0.0-alpha.1",
     "file-loader": "^6.2.0"
   },
@@ -24,32 +55,44 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
-    "@mui/material": "^5.14.3",
+    "@mui/material": "^5.14.12",
+    "@mui/system": "^5.14.14",
+    "@react-pdf/renderer": "^3.1.12",
+    "@reduxjs/toolkit": "^1.9.6",
     "@types/jest": "^29.5.4",
     "@types/node": "^20.5.3",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "axios": "^1.4.0",
     "babel-loader": "^9.1.3",
+    "chart.js": "^4.4.0",
     "chroma-js": "^2.4.2",
     "context": "^3.0.7",
     "css-loader": "^6.8.1",
+    "electron-reload": "^2.0.0-alpha.1",
+    "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.1.0",
+    "ethiopian-calendar-date-converter": "^2.1.2",
+    "file-loader": "^6.2.0",
     "fontkit": "^2.0.2",
     "framer-motion": "^10.16.4",
     "media-engine": "^1.0.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-color": "^2.19.3",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-github-btn": "^1.4.0",
-    "react-icons": "^4.10.1",
+    "react-icons": "^4.11.0",
     "react-paystack": "^4.0.3",
+    "react-pdf": "^7.4.0",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
     "reactstrap": "^9.2.0",
+    "redux": "^4.2.1",
     "regenerator-runtime": "^0.14.0",
     "sass": "^1.64.2",
     "sass-loader": "^13.3.2",
